--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
     <!-- ======= Titulo Page ======= -->
 
-<link rel="shortcut icon" href="./assets/img/Favicon.png" type="image/png">
+    <link rel="shortcut icon" href="./assets/img/Favicon.png" type="image/png">
 
     <title>Dev&Design</title>
 </head>
@@ -450,7 +450,9 @@
                                     Leer Más
                                 </a>
                             </div>
-                            <a href="#" class="get-started-btn align-content-end">Contactanos</a>
+                            <a target="_black"
+                            href="https://api.whatsapp.com/send?phone=+573506838445&text=I'm%20interested%20in%20your%20services"
+                            class="get-started-btn">Contactanos</a>
                         </div>
 
                         <div class="col-lg-4 box featured d-flex flex-column">
@@ -468,7 +470,9 @@
                                     Leer Más
                                 </a>
                             </div>
-                            <a href="#" class="get-started-btn align-content-end">Contactanos</a>
+                            <a target="_black"
+                            href="https://api.whatsapp.com/send?phone=+573506838445&text=I'm%20interested%20in%20your%20services"
+                            class="get-started-btn">Contactanos</a>
                         </div>
 
                         <div class="col-lg-4 box d-flex flex-column">
@@ -482,7 +486,9 @@
                                     Leer Más
                                 </a>
                             </div>
-                            <a href="#" class="get-started-btn align-content-end">Contactanos</a>
+                            <a target="_black"
+                            href="https://api.whatsapp.com/send?phone=+573506838445&text=I'm%20interested%20in%20your%20services"
+                            class="get-started-btn">Contactanos</a>
                         </div>
                     </div>
 
@@ -501,7 +507,9 @@
                                     Leer Más
                                 </a>
                             </div>
-                            <a href="#" class="get-started-btn">Contactanosd</a>
+                            <a target="_black"
+                            href="https://api.whatsapp.com/send?phone=+573506838445&text=I'm%20interested%20in%20your%20services"
+                            class="get-started-btn">Contactanos</a>
                         </div>
 
                         <div class="col-lg-4 box featured1 d-flex flex-column">
@@ -516,7 +524,9 @@
                                     Leer Más
                                 </a>
                             </div>
-                            <a href="#" class="get-started-btn">Contactanos</a>
+                            <a target="_black"
+                            href="https://api.whatsapp.com/send?phone=+573506838445&text=I'm%20interested%20in%20your%20services"
+                            class="get-started-btn">Contactanos</a>
                         </div>
 
                         <div class="col-lg-4 box d-flex flex-column">
@@ -529,12 +539,12 @@
                                 voluptate facere officia dicta unde aperiam amet optio tempore.
                             </p>
                             <div class="read-more text-left py-2"><a href="">
-                                <i class="fas fa-arrow-right"></i>
-                                Leer Más
-                            </a>
-                        </div>
+                                    <i class="fas fa-arrow-right"></i>
+                                    Leer Más
+                                </a>
+                            </div>
                             <a target="_black"
-                                href="https://api.whatsapp.com/send?phone=+573112577264&text=I'm%20interested%20in%20your%20services"
+                                href="https://api.whatsapp.com/send?phone=+573506838445&text=I'm%20interested%20in%20your%20services"
                                 class="get-started-btn">Contactanos</a>
                         </div>
                     </div>
@@ -584,7 +594,7 @@
                     </div>
 
                     <div class="col-lg-6">
-                        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                        <form action="forms/contact.php" id="#newsletterForm" method="post" role="form" class="php-email-form">
                             <div class="form-row">
                                 <div class="col-md-6 form-group">
                                     <input type="text" name="name" class="form-control" id="name"
@@ -615,6 +625,7 @@
                                 <div class="error-message"></div>
                                 <div class="sent-message">Your message has been sent. Thank you!</div>
                             </div>
+
                             <div class="text-center"><button type="submit">Send Message</button></div>
                         </form>
                     </div>
@@ -676,7 +687,6 @@
 
     <!-- = Main = -->
     <script src="assets/js/main.js"></script>
-
 </body>
 
 </html>
