cambios animacion y textos

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <div class="container">
             <div class="row d-flex align-items-center py-5">
                 <div class=" col-lg-6 py-5 py-lg-0 order-2 order-lg-2 text-center text-md-right" data-aos="fade-left">
-                    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
-                    <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, nesciunt.</h2>
+                    <h1 class="animacion-maquina">Hacemos tus ideas realidad.<span>&#160;</span></h1>
+                    <h2>Somos una empresa de desarrollo a tu medida renovamos y creamos la imagen de tu empresa</h2>
                     <a href="#pricing" class="btn-get-started scrollto">Cotizar Ahora</a>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-1 hero-img py-5" data-aos="fade-down-right">
@@ -626,6 +626,10 @@
                                 <div class="sent-message">Your message has been sent. Thank you!</div>
                             </div>
 
+                            <div class="pb-3">
+                                <div class="g-recaptcha" data-sitekey="6LeSUPocAAAAAP5KRIUIjx2Asck8PNPmvq2cBwGA"></div>
+                            </div>
+
                             <div class="text-center"><button type="submit">Send Message</button></div>
                         </form>
                     </div>
@@ -672,6 +676,7 @@
     <a href="#" class="back-to-top"><i class="fas fa-arrow-up"></i></a>
     <!-- = Js Bootstrap 4.4 = -->
     <script src="./assets/venobox/jquery.min.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
