--- a/index.html
+++ b/index.html
@@ -405,9 +405,8 @@
 
                 <div class="section-title">
                     <h2 data-aos="fade-in">Precios</h2>
-                    <p data-aos="fade-in">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid
-                        fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui
-                        impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                    <p data-aos="fade-in">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi
+                        quidem hic quas.</p>
                 </div>
 
                 <div class="row">
@@ -426,69 +425,65 @@
                         <div class="col-lg-12 pb-5">
                             <h4>DESAROLLO</h4>
                         </div>
-                        <div class="col-lg-4 box d-flex flex-column">
+                        <div class="col-lg-3 box d-flex flex-column">
                             <div>
                                 <h3>WEB</h3>
-                                <h4>$500.000<span>LANDING PAGE</span></h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet modi minus at
-                                    dolores!
-                                    Maiores laboriosam laborum, a sed eveniet esse.</p>
-                                <div class="read-more text-left py-2"><a href="">
-                                        <i class="fas fa-arrow-right"></i>
-                                        Leer Más
+                                <span class="subtitle">DESDE</span>
+                                <h3 class="subtitle">$500.000</h3>
+                                <span>LANDING PAGE</span>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet modi minus at dolores! Maiores laboriosam laborum, a sed eveniet esse.</p>
+                                <div class="read-more text-left py-2">
+                                    <a href="./src/pages/web.html">
+                                        <i class="fas fa-arrow-right"></i> Leer Más
                                     </a>
                                 </div>
-                                <span class="subtitle">DESDE</span>
-                                <h4>$1'000.000<span>MARKETPLACE</span></h4>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae aperiam perferendis
-                                    eos
-                                    nobis temporibus eligendi possimus incidunt cum nemo autem!</p>
                             </div>
+                            <a href="#" class="get-started-btn align-content-end">Contactanos</a>
+                        </div>
+
+                        <div class="col-lg-3 box featured d-flex flex-column">
+                            <span class="featured-badge">OFERTA</span>
+                            <h3>MARKETPLACE</h3>
+                            <span class="subtitle">DESDE</span>
+                            <h3 class="subtitle">$1'000.000</h3>
+                            <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda, non cum sint laudantium odio adipisci sequi quos molestias dignissimos voluptates sed excepturi totam consectetur quia animi officiis iste! Aliquid perferendis
+                                fuga odit minus possimus. Aliquam corrupti unde iste voluptate etc.
+                            </P>
+                            <div class="read-more text-left py-2">
+                                <a href="./src/pages/Marketplace.html">
+                                    <i class="fas fa-arrow-right"></i> Leer Más
+                                </a>
+                            </div>
+                            <a href="#" class="get-started-btn align-content-end">Contactanos</a>
+                        </div>
+
+                        <div class="col-lg-3 box featured d-flex flex-column">
+                            <span class="featured-badge">OFERTA</span>
+                            <h3 class="">PERSONALIZADO</h3>
+                            <span class="subtitle">DESDE</span>
+                            <h3 class="subtitle">$1'500.000</h3>
+                            <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda, non cum sint laudantium odio adipisci sequi quos molestias dignissimos voluptates sed excepturi totam consectetur quia animi officiis iste! Aliquid perferendis
+                                fuga odit minus possimus. Aliquam corrupti unde iste voluptate etc.
+                            </P>
                             <div class="read-more text-left py-2">
                                 <a href="">
-                                    <i class="fas fa-arrow-right"></i>
-                                    Leer Más
+                                    <i class="fas fa-arrow-right"></i> Leer Más
                                 </a>
                             </div>
-                            <a target="_black"
-                            href="https://api.whatsapp.com/send?phone=+573506838445&text=I'm%20interested%20in%20your%20services"
-                            class="get-started-btn">Contactanos</a>
+                            <a href="#" class="get-started-btn align-content-end">Contactanos</a>
                         </div>
 
-                        <div class="col-lg-4 box featured d-flex flex-column">
-                            <span class="featured-badge">OFERTA</span>
-                            <h3>PERSONALIZADO</h3>
-                            <span class="subtitle">DESDE</span>
-                            <h4>$1'500.000</h4>
-                            <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda, non cum sint
-                                laudantium odio adipisci sequi quos molestias dignissimos voluptates sed excepturi totam
-                                consectetur quia animi officiis iste! Aliquid perferendis fuga odit minus possimus.
-                                Aliquam corrupti unde iste voluptate etc.
-                            </P>
-                            <div class="read-more text-left py-2"><a href="">
-                                    <i class="fas fa-arrow-right"></i>
-                                    Leer Más
-                                </a>
-                            </div>
-                            <a target="_black"
-                            href="https://api.whatsapp.com/send?phone=+573506838445&text=I'm%20interested%20in%20your%20services"
-                            class="get-started-btn">Contactanos</a>
-                        </div>
-
-                        <div class="col-lg-4 box d-flex flex-column">
+                        <div class="col-lg-3 box d-flex flex-column">
                             <h3>MOBILE</h3>
                             <span class="subtitle">DESDE</span>
-                            <h4>$2'000.000</h4>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A accusantium dolore aperiam
-                                tempora et tempore praesentium ipsum recusandae dolor culpa?</p>
-                            <div class="read-more text-left py-2"><a href="">
-                                    <i class="fas fa-arrow-right"></i>
-                                    Leer Más
+                            <h3 class="subtitle">$2'000.000</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A accusantium dolore aperiam tempora et tempore praesentium ipsum recusandae dolor culpa?</p>
+                            <div class="read-more text-left py-2">
+                                <a href="">
+                                    <i class="fas fa-arrow-right"></i> Leer Más
                                 </a>
                             </div>
-                            <a target="_black"
-                            href="https://api.whatsapp.com/send?phone=+573506838445&text=I'm%20interested%20in%20your%20services"
-                            class="get-started-btn">Contactanos</a>
+                            <a href="#" class="get-started-btn align-content-end">Contactanos</a>
                         </div>
                     </div>
 
@@ -500,16 +495,13 @@
                             <h3>Publicidad</h3>
                             <span class="subtitle">DESDE</span>
                             <h4>$60.000<span>Diseño Publicitario</span></h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ea odio mollitia aliquam
-                                saepe? Architecto dolores cupiditate deserunt quaerat itaque?</p>
-                            <div class="read-more text-left py-2"><a href="">
-                                    <i class="fas fa-arrow-right"></i>
-                                    Leer Más
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ea odio mollitia aliquam saepe? Architecto dolores cupiditate deserunt quaerat itaque?</p>
+                            <div class="read-more text-left py-2">
+                                <a href="">
+                                    <i class="fas fa-arrow-right"></i> Leer Más
                                 </a>
                             </div>
-                            <a target="_black"
-                            href="https://api.whatsapp.com/send?phone=+573506838445&text=I'm%20interested%20in%20your%20services"
-                            class="get-started-btn">Contactanos</a>
+                            <a href="#" class="get-started-btn">Contactanosd</a>
                         </div>
 
                         <div class="col-lg-4 box featured1 d-flex flex-column">
@@ -517,16 +509,13 @@
                             <h3>BRANDING</h3>
                             <span class="subtitle">DESDE</span>
                             <h4>$100.000<span>Diseño y creacion de Marca</span></h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ipsum provident corrupti
-                                unde eaque aliquid ea at nulla ab consectetur?</p>
-                            <div class="read-more text-left py-2"><a href="">
-                                    <i class="fas fa-arrow-right"></i>
-                                    Leer Más
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ipsum provident corrupti unde eaque aliquid ea at nulla ab consectetur?</p>
+                            <div class="read-more text-left py-2">
+                                <a href="./src/pages/web.html">
+                                    <i class="fas fa-arrow-right"></i> Leer Más
                                 </a>
                             </div>
-                            <a target="_black"
-                            href="https://api.whatsapp.com/send?phone=+573506838445&text=I'm%20interested%20in%20your%20services"
-                            class="get-started-btn">Contactanos</a>
+                            <a href="#" class="get-started-btn">Contactanos</a>
                         </div>
 
                         <div class="col-lg-4 box d-flex flex-column">
@@ -535,17 +524,14 @@
                             <span class="subtitle">DESDE</span>
                             <h4>$70.000<span>Ilustraciones Personales</span></h4>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti et praesentium
-                                voluptate facere officia dicta unde aperiam amet optio tempore.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti et praesentium voluptate facere officia dicta unde aperiam amet optio tempore.
                             </p>
-                            <div class="read-more text-left py-2"><a href="">
-                                    <i class="fas fa-arrow-right"></i>
-                                    Leer Más
+                            <div class="read-more text-left py-2">
+                                <a href="">
+                                    <i class="fas fa-arrow-right"></i> Leer Más
                                 </a>
                             </div>
-                            <a target="_black"
-                                href="https://api.whatsapp.com/send?phone=+573506838445&text=I'm%20interested%20in%20your%20services"
-                                class="get-started-btn">Contactanos</a>
+                            <a target="_black" href="https://api.whatsapp.com/send?phone=+573112577264&text=I'm%20interested%20in%20your%20services" class="get-started-btn">Contactanos</a>
                         </div>
                     </div>
                 </div>
