--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <main id="main">
 
-        <section id="clients" class="clients section-bg">
+        <!-- <section id="clients" class="clients section-bg">
             <div class="container">
                 <div class="row no-gutters clients-wrap clearfix wow fadeInUp">
                     <div class="titulo-clientes col-12 text-center pt-5" data-aos="zoom-in-down">
@@ -119,7 +119,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section id="about" class="about section-bg">
             <div class="container">
@@ -130,32 +130,44 @@
                     <div class="col-xl-7 pl-0 pr-lg-5 pr-lg-1 d-flex align-items-stretch order-lg-1">
                         <div class="content d-flex flex-column justify-content-center ">
                             <h3 class="text-center" data-aos="fade-in" data-aos-delay="100">Sobre Nosotros</h3>
-                            <p data-aos="fade-in" class="text-center pl-2">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
-                            </p>
-                            <div class="row pl-5 pl-md-0">
+                            <div class="text-center pl-2">
+                                <p data-aos="fade-in">
+                                    Somos una empresa que genera soluciones de software y diseño, llevamos 2 años en el
+                                    mercado y con cada uno de nuestros profecionales <b>brindamos la confianza para
+                                        entregar
+                                        a nuestros clientes el mejor resultado.</b>
+
+                                </p>
+                                <p data-aos="fade-in" class="pt-3">
+                                    Creamos <b>Diseños Personalizados</b> , <b>Aplicaciones Web</b> , <b>Aplicaciones
+                                        Mobiles</b> a medida nos ajustamos a la nececidad de cada cliente,
+                                    <b>facilitamos los procesos
+                                        de la empresa aportando un valor agregado profecional y empresarial.</b>
+                                </p>
+                            </div>
+
+                            <div class="row pl-5 pt-5 pl-md-0">
                                 <div class="col-md-6 col-12 icon-box" data-aos="fade-up">
-                                    <i class="far fa-newspaper"></i>
-                                    <h4><a href="#">Corporis voluptates sit</a></h4>
+                                    <i class="fas fa-dollar-sign"></i>
+                                    <h4><a>PRECIOS</a></h4>
                                     <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut
                                         aliquip</p>
                                 </div>
                                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-                                    <i class="fab fa-dashcube"></i>
-                                    <h4><a href="#">Ullamco laboris nisi</a></h4>
+                                    <i class="fas fa-balance-scale"></i>
+                                    <h4><a>CALIDAD</a></h4>
                                     <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                                         deserunt</p>
                                 </div>
                                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-                                    <i class="fas fa-images"></i>
-                                    <h4><a href="#">Labore consequatur</a></h4>
+                                    <i class="far fa-lightbulb"></i>
+                                    <h4><a>IDEAS</a></h4>
                                     <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere
                                     </p>
                                 </div>
                                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-                                    <i class="fas fa-shield-alt"></i>
-                                    <h4><a href="#">Beatae veritatis</a></h4>
+                                    <i class="far fa-clock"></i>
+                                    <h4><a>TIEMPO</a></h4>
                                     <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
                                 </div>
                             </div>
@@ -405,7 +417,9 @@
 
                 <div class="section-title">
                     <h2 data-aos="fade-in">Precios</h2>
-                    <p data-aos="fade-in">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi
+                    <p data-aos="fade-in">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid
+                        fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui
+                        impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi
                         quidem hic quas.</p>
                 </div>
 
@@ -431,7 +445,8 @@
                                 <span class="subtitle">DESDE</span>
                                 <h3 class="subtitle">$500.000</h3>
                                 <span>LANDING PAGE</span>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet modi minus at dolores! Maiores laboriosam laborum, a sed eveniet esse.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet modi minus at
+                                    dolores! Maiores laboriosam laborum, a sed eveniet esse.</p>
                                 <div class="read-more text-left py-2">
                                     <a href="./src/pages/web.html">
                                         <i class="fas fa-arrow-right"></i> Leer Más
@@ -446,7 +461,9 @@
                             <h3>MARKETPLACE</h3>
                             <span class="subtitle">DESDE</span>
                             <h3 class="subtitle">$1'000.000</h3>
-                            <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda, non cum sint laudantium odio adipisci sequi quos molestias dignissimos voluptates sed excepturi totam consectetur quia animi officiis iste! Aliquid perferendis
+                            <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda, non cum sint
+                                laudantium odio adipisci sequi quos molestias dignissimos voluptates sed excepturi totam
+                                consectetur quia animi officiis iste! Aliquid perferendis
                                 fuga odit minus possimus. Aliquam corrupti unde iste voluptate etc.
                             </P>
                             <div class="read-more text-left py-2">
@@ -462,7 +479,9 @@
                             <h3 class="">PERSONALIZADO</h3>
                             <span class="subtitle">DESDE</span>
                             <h3 class="subtitle">$1'500.000</h3>
-                            <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda, non cum sint laudantium odio adipisci sequi quos molestias dignissimos voluptates sed excepturi totam consectetur quia animi officiis iste! Aliquid perferendis
+                            <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda, non cum sint
+                                laudantium odio adipisci sequi quos molestias dignissimos voluptates sed excepturi totam
+                                consectetur quia animi officiis iste! Aliquid perferendis
                                 fuga odit minus possimus. Aliquam corrupti unde iste voluptate etc.
                             </P>
                             <div class="read-more text-left py-2">
@@ -477,7 +496,8 @@
                             <h3>MOBILE</h3>
                             <span class="subtitle">DESDE</span>
                             <h3 class="subtitle">$2'000.000</h3>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A accusantium dolore aperiam tempora et tempore praesentium ipsum recusandae dolor culpa?</p>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A accusantium dolore aperiam
+                                tempora et tempore praesentium ipsum recusandae dolor culpa?</p>
                             <div class="read-more text-left py-2">
                                 <a href="">
                                     <i class="fas fa-arrow-right"></i> Leer Más
@@ -495,7 +515,8 @@
                             <h3>Publicidad</h3>
                             <span class="subtitle">DESDE</span>
                             <h4>$60.000<span>Diseño Publicitario</span></h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ea odio mollitia aliquam saepe? Architecto dolores cupiditate deserunt quaerat itaque?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ea odio mollitia aliquam
+                                saepe? Architecto dolores cupiditate deserunt quaerat itaque?</p>
                             <div class="read-more text-left py-2">
                                 <a href="">
                                     <i class="fas fa-arrow-right"></i> Leer Más
@@ -509,7 +530,8 @@
                             <h3>BRANDING</h3>
                             <span class="subtitle">DESDE</span>
                             <h4>$100.000<span>Diseño y creacion de Marca</span></h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ipsum provident corrupti unde eaque aliquid ea at nulla ab consectetur?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ipsum provident corrupti
+                                unde eaque aliquid ea at nulla ab consectetur?</p>
                             <div class="read-more text-left py-2">
                                 <a href="./src/pages/web.html">
                                     <i class="fas fa-arrow-right"></i> Leer Más
@@ -524,14 +546,17 @@
                             <span class="subtitle">DESDE</span>
                             <h4>$70.000<span>Ilustraciones Personales</span></h4>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti et praesentium voluptate facere officia dicta unde aperiam amet optio tempore.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti et praesentium
+                                voluptate facere officia dicta unde aperiam amet optio tempore.
                             </p>
                             <div class="read-more text-left py-2">
                                 <a href="">
                                     <i class="fas fa-arrow-right"></i> Leer Más
                                 </a>
                             </div>
-                            <a target="_black" href="https://api.whatsapp.com/send?phone=+573112577264&text=I'm%20interested%20in%20your%20services" class="get-started-btn">Contactanos</a>
+                            <a target="_black"
+                                href="https://api.whatsapp.com/send?phone=+573112577264&text=I'm%20interested%20in%20your%20services"
+                                class="get-started-btn">Contactanos</a>
                         </div>
                     </div>
                 </div>
@@ -543,7 +568,7 @@
             <div class="container">
 
                 <div class="section-title">
-                    <h2>Contactanos</h2>
+                    <h2>Contacto</h2>
                     <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid
                         fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui
                         impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
@@ -557,22 +582,22 @@
                             <div class="col-md-12">
                                 <div class="info-box">
                                     <i class="fas fa-map-marker-alt"></i>
-                                    <h3>Our Address</h3>
-                                    <p>direccion</p>
+                                    <h3>Direccion</h3>
+                                    <p>Bogota D.C.</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="info-box mt-4">
                                     <i class="far fa-envelope"></i>
-                                    <h3>Email Us</h3>
-                                    <p>info@example.com<br>contact@example.com</p>
+                                    <h3>Correo</h3>
+                                    <p>devandesignsuport@gmail.com </p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="info-box mt-4">
                                     <i class="fas fa-phone-alt"></i>
-                                    <h3>Call Us</h3>
-                                    <p>+1 5589 55488 55<br>+1 6678 254445 41</p>
+                                    <h3>Telefono</h3>
+                                    <p>+57 350 6838445</p>
                                 </div>
                             </div>
                         </div>
@@ -580,30 +605,31 @@
                     </div>
 
                     <div class="col-lg-6">
-                        <form action="forms/contact.php" id="#newsletterForm" method="post" role="form" class="php-email-form">
+                        <form action="forms/contact.php" id="#newsletterForm" method="post" role="form"
+                            class="php-email-form">
                             <div class="form-row">
                                 <div class="col-md-6 form-group">
                                     <input type="text" name="name" class="form-control" id="name"
-                                        placeholder="Your Name" data-rule="minlen:4"
+                                        placeholder="Tu Nombre" data-rule="minlen:4"
                                         data-msg="Please enter at least 4 chars" />
                                     <div class="validate"></div>
                                 </div>
                                 <div class="col-md-6 form-group">
                                     <input type="email" class="form-control" name="email" id="email"
-                                        placeholder="Your Email" data-rule="email"
+                                        placeholder="Tu Correo" data-rule="email"
                                         data-msg="Please enter a valid email" />
                                     <div class="validate"></div>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <input type="text" class="form-control" name="subject" id="subject"
-                                    placeholder="Subject" data-rule="minlen:4"
+                                    placeholder="Asunto" data-rule="minlen:4"
                                     data-msg="Please enter at least 8 chars of subject" />
                                 <div class="validate"></div>
                             </div>
                             <div class="form-group">
                                 <textarea class="form-control" name="message" rows="5" data-rule="required"
-                                    data-msg="Please write something for us" placeholder="Message"></textarea>
+                                    data-msg="Please write something for us" placeholder="Mensaje"></textarea>
                                 <div class="validate"></div>
                             </div>
                             <div class="mb-3">
@@ -616,7 +642,7 @@
                                 <div class="g-recaptcha" data-sitekey="6LeSUPocAAAAAP5KRIUIjx2Asck8PNPmvq2cBwGA"></div>
                             </div>
 
-                            <div class="text-center"><button type="submit">Send Message</button></div>
+                            <div class="text-center"><button type="submit">Enviar Mensaje</button></div>
                         </form>
                     </div>
 
