--- a/src/pages/web.html
+++ b/src/pages/web.html
@@ -35,7 +35,7 @@
             <!-- ======= Logo ======= -->
             <div class="logo mr-auto">
                 <h1 class="text-ligth">
-                    <a href="index.html">Dev&<span>Design</span></a>
+                    <a href="../../index.html">Dev&<span>Design</span></a>
                 </h1>
             </div>
             <!-- ======= Navigation ======= -->
@@ -43,11 +43,11 @@
                 <ul>
                     <li class="active"><a href="../../index.html">Inicio</a></li>
                     <li><a href="../../index.html#about">Sobre Nosotros</a></li>
-                    <li><a href="#services">Servicios</a></li>
-                    <li><a href="#portfolio">Nuestros Trabajos</a></li>
-                    <li><a href="#team">Nuestro Equipo</a></li>
-                    <li><a href="#contact">Contactanos</a></li>
-                    <li class="get-started"><a href="#pricing">Cotizar Ahora</a></li>
+                    <li><a href="../../index.html#services">Servicios</a></li>
+                    <li><a href="../../index.html#portfolio">Nuestros Trabajos</a></li>
+                    <li><a href="../../index.html#team">Nuestro Equipo</a></li>
+                    <li><a href="../../index.html#contact">Contactanos</a></li>
+                    <li class="get-started"><a href="../../index.html#pricing">Cotizar Ahora</a></li>
                 </ul>
             </nav>
         </div>
@@ -232,7 +232,7 @@
     </footer>
     <!-- End Footer -->
 
-    <a href="#" class="back-to-top"><i class="fas fa-arrow-up"></i></a>
+    <!-- <a href="#" class="back-to-top"><i class="fas fa-arrow-up"></i></a> -->
     <!-- = Js Bootstrap 4.4 = -->
     <script src="../../assets/venobox/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
