acabando sobre nosotros

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="shortcut icon" href="./assets/img/Favicon.png" type="image/png">
 
     <title>Dev&Design</title>
+
 </head>
 
 <body>
@@ -130,7 +131,7 @@
                     <div class="col-xl-7 pl-0 pr-lg-5 pr-lg-1 d-flex align-items-stretch order-lg-1">
                         <div class="content d-flex flex-column justify-content-center ">
                             <h3 class="text-center" data-aos="fade-in" data-aos-delay="100">Sobre Nosotros</h3>
-                            <div class="text-center pl-2">
+                            <div class="text-md-left text-center  pl-2 pt-2">
                                 <p data-aos="fade-in">
                                     Somos una empresa que genera soluciones de software y diseño, llevamos 2 años en el
                                     mercado y con cada uno de nuestros profecionales <b>brindamos la confianza para
@@ -140,8 +141,8 @@
                                 </p>
                                 <p data-aos="fade-in" class="pt-3">
                                     Creamos <b>Diseños Personalizados</b> , <b>Aplicaciones Web</b> , <b>Aplicaciones
-                                        Mobiles</b> a medida nos ajustamos a la nececidad de cada cliente,
-                                    <b>facilitamos los procesos
+                                        Mobiles</b> a medida, nos ajustamos a la nececidad de cada cliente
+                                    <b>facilitando los procesos
                                         de la empresa aportando un valor agregado profecional y empresarial.</b>
                                 </p>
                             </div>
@@ -150,25 +151,25 @@
                                 <div class="col-md-6 col-12 icon-box" data-aos="fade-up">
                                     <i class="fas fa-dollar-sign"></i>
                                     <h4><a>PRECIOS</a></h4>
-                                    <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut
-                                        aliquip</p>
+                                    <p>Manejamos diferentes tipos de precios como: <b>Por proyecto</b> ó
+                                        <b>Por tiempo </b> de Desarollo/Mantenimiento.</p>
                                 </div>
                                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-                                    <i class="fas fa-balance-scale"></i>
+                                    <i class="fas fa-chart-line"></i>
                                     <h4><a>CALIDAD</a></h4>
-                                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                                        deserunt</p>
+                                    <p>Nuestros proyectos se realizan con <b>altos estandares de calidad</b> , generando
+                                        confianza a nuestros clientes.</p>
                                 </div>
                                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                                     <i class="far fa-lightbulb"></i>
                                     <h4><a>IDEAS</a></h4>
-                                    <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere
-                                    </p>
+                                    <p>Tomamos los requisitos del cliente ofreciendo distintas formas de solucion para
+                                        poder <b>convertir una idea en realidad</b>.</p>
                                 </div>
                                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                                     <i class="far fa-clock"></i>
                                     <h4><a>TIEMPO</a></h4>
-                                    <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+                                    <p>Los tiempos de desarrollo de cada proyecto se pactan con el cliente, para entregar los resultados con<b> calidad y respetando lo acordado</b>. </p>
                                 </div>
                             </div>
                         </div><!-- End .content-->
@@ -622,9 +623,8 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" name="subject" id="subject"
-                                    placeholder="Asunto" data-rule="minlen:4"
-                                    data-msg="Please enter at least 8 chars of subject" />
+                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Asunto"
+                                    data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
                                 <div class="validate"></div>
                             </div>
                             <div class="form-group">
@@ -684,6 +684,7 @@
             </div>
         </div>
     </footer><!-- End Footer -->
+    <!-- <script src="https://account.snatchbot.me/script.js"></script><script>window.sntchChat.Init(210965)</script>  -->
 
     <a href="#" class="back-to-top"><i class="fas fa-arrow-up"></i></a>
     <!-- = Js Bootstrap 4.4 = -->
