añadiendo paginas web

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                         <ul id="portfolio-flters">
                             <li data-filter="*" class="filter-active">Todos</li>
                             <li data-filter=".filter-web">Desarollo Web</li>
-                            <li data-filter=".filter-Mobile">Desarollo Mobile</li>
+                            <!-- <li data-filter=".filter-Mobile">Desarollo Mobile</li> -->
                             <li data-filter=".filter-Ilustraciones">Ilustraciones</li>
                             <li data-filter=".filter-Branding">Branding</li>
                         </ul>
@@ -276,32 +276,32 @@
                 <div class="row portfolio-container" data-aos="fade-up">
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/1.png" class="img-fluid" alt="">
                             <div class="portfolio-links">
-                                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery"
+                                <a href="assets/img/portfolio/1.png" data-gall="portfolioGallery"
                                     class="venobox" title="App 1">
                                     <i class="fas fa-plus"></i>
                                 </a>
-                                <a href="#" title="More Details">
+                                <a href="https://technext.github.io/jadoo/v1.0.0/index.html" target="_blank" title="More Details">
                                     <i class="fas fa-link"></i>
                                 </a>
                             </div>
                             <div class="portfolio-info">
-                                <h4>App 1</h4>
-                                <p>App</p>
+                                <h4>Jadoo</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-Mobile">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/2.png" class="img-fluid" alt="">
                             <div class="portfolio-links">
-                                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery"
+                                <a href="assets/img/portfolio/2.png" data-gall="portfolioGallery"
                                     class="venobox" title="App 1">
                                     <i class="fas fa-plus"></i>
                                 </a>
-                                <a href="#" title="More Details">
+                                <a href="https://technext.github.io/courier/v1.0.0/" title="More Details">
                                     <i class="fas fa-link"></i>
                                 </a>
                             </div>
