--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
 
     <link rel="shortcut icon" href="./assets/img/Favicon.png" type="image/png">
 
+    <link rel="stylesheet" href="assets/css/swiper.css">
+
+
+
+
+
+
     <title>Dev&Design</title>
 
 </head>
@@ -152,7 +159,8 @@
                                     <i class="fas fa-dollar-sign"></i>
                                     <h4><a>PRECIOS</a></h4>
                                     <p>Manejamos diferentes tipos de precios como: <b>Por proyecto</b> ó
-                                        <b>Por tiempo </b> de Desarollo/Mantenimiento.</p>
+                                        <b>Por tiempo </b> de Desarollo/Mantenimiento.
+                                    </p>
                                 </div>
                                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
                                     <i class="fas fa-chart-line"></i>
@@ -169,7 +177,8 @@
                                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                                     <i class="far fa-clock"></i>
                                     <h4><a>TIEMPO</a></h4>
-                                    <p>Los tiempos de desarrollo de cada proyecto se pactan con el cliente, para entregar los resultados con<b> calidad y respetando lo acordado</b>. </p>
+                                    <p>Los tiempos de desarrollo de cada proyecto se pactan con el cliente, para
+                                        entregar los resultados con<b> calidad y respetando lo acordado</b>. </p>
                                 </div>
                             </div>
                         </div><!-- End .content-->
@@ -278,11 +287,12 @@
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/1.png" class="img-fluid" alt="">
                             <div class="portfolio-links">
-                                <a href="assets/img/portfolio/1.png" data-gall="portfolioGallery"
-                                    class="venobox" title="App 1">
+                                <a href="assets/img/portfolio/1.png" data-gall="portfolioGallery" class="venobox"
+                                    title="App 1">
                                     <i class="fas fa-plus"></i>
                                 </a>
-                                <a href="https://technext.github.io/jadoo/v1.0.0/index.html" target="_blank" title="More Details">
+                                <a href="https://technext.github.io/jadoo/v1.0.0/index.html" target="_blank"
+                                    title="More Details">
                                     <i class="fas fa-link"></i>
                                 </a>
                             </div>
@@ -297,8 +307,8 @@
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/2.png" class="img-fluid" alt="">
                             <div class="portfolio-links">
-                                <a href="assets/img/portfolio/2.png" data-gall="portfolioGallery"
-                                    class="venobox" title="App 1">
+                                <a href="assets/img/portfolio/2.png" data-gall="portfolioGallery" class="venobox"
+                                    title="App 1">
                                     <i class="fas fa-plus"></i>
                                 </a>
                                 <a href="https://technext.github.io/courier/v1.0.0/" title="More Details">
@@ -355,7 +365,6 @@
 
             </div>
         </section>
-
 
         <section id="team" class="team section-bg">
             <div class="container">
@@ -564,6 +573,137 @@
 
             </div>
         </Section>
+
+        <section id="testimonial">
+            <div class="container">
+                <div class="section-title">
+                    <h2>Testimonios de Nuestros Clientes</h2>
+                    <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid
+                        fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui
+                        impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi
+                        quidem hic quas.</p>
+                </div>
+                <div class="slider-1">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-12">
+
+                                <!-- Card Slider -->
+                                <div class="slider-container">
+                                    <div class="swiper-container card-slider">
+                                        <div class="swiper-wrapper">
+
+                                            <!-- Slide -->
+                                            <div class="swiper-slide">
+                                                <div class="card">
+                                                    <img class="quotes" src="assets/img/quotes.svg" alt="alternative">
+                                                    <div class="card-body">
+                                                        <p class="testimonial-text">Fusce tincidunt dui nec diam varius
+                                                            venenatis. Nullam tristique rutrum odio, ut tincidunt erat
+                                                            dictum in. Etiam et aliquet mi, et vehicula elit fusce porta
+                                                            ullamcorper</p>
+                                                        <div class="details">
+                                                            <img class="testimonial-image"
+                                                                src="assets/img/testimonial-1.jpg" alt="alternative">
+                                                            <div class="text">
+                                                                <div class="testimonial-author">Samantha Bloom</div>
+                                                                <div class="occupation">Team Leader - Syncnow</div>
+                                                            </div> <!-- end of text -->
+                                                        </div> <!-- end of testimonial-details -->
+                                                    </div>
+                                                </div>
+                                            </div> <!-- end of swiper-slide -->
+                                            <!-- end of slide -->
+
+                                            <!-- Slide -->
+                                            <div class="swiper-slide">
+                                                <div class="card">
+                                                    <img class="quotes" src="assets/img/quotes.svg" alt="alternative">
+                                                    <div class="card-body">
+                                                        <p class="testimonial-text">Mauris ut mattis nisl. Nunc ultrices
+                                                            nisi eget nisl pulvinar iaculis vitae ac nulla. Nullam
+                                                            fringilla
+                                                            varius blandit. Nam sit amet eleifend justo blogo rovan de
+                                                            chichis kokos venir dab</p>
+                                                        <div class="details">
+                                                            <img class="testimonial-image"
+                                                                src="assets/img/testimonial-1.jpg" alt="alternative">
+                                                            <div class="text">
+                                                                <div class="testimonial-author">Mike Page</div>
+                                                                <div class="occupation">Developer - Chainlink</div>
+                                                            </div> <!-- end of text -->
+                                                        </div> <!-- end of testimonial-details -->
+                                                    </div>
+                                                </div>
+                                            </div> <!-- end of swiper-slide -->
+                                            <!-- end of slide -->
+
+                                            <!-- Slide -->
+                                            <div class="swiper-slide">
+                                                <div class="card">
+                                                    <img class="quotes" src="assets/img/quotes.svg" alt="alternative">
+                                                    <div class="card-body">
+                                                        <p class="testimonial-text">Nam sit amet eleifend justo. Aliquam
+                                                            sit
+                                                            amet lacinia enim, eget facilisis ex. Ut pretium cursus
+                                                            eleifend. Integer feugiat malesuada quam vel basil venis
+                                                            proca
+                                                            jilo</p>
+                                                        <div class="details">
+                                                            <img class="testimonial-image"
+                                                                src="assets/img/testimonial-1.jpg" alt="alternative">
+                                                            <div class="text">
+                                                                <div class="testimonial-author">Mary Longhorn</div>
+                                                                <div class="occupation">Manager - Firstdev</div>
+                                                            </div> <!-- end of text -->
+                                                        </div> <!-- end of testimonial-details -->
+                                                    </div>
+                                                </div>
+                                            </div> <!-- end of swiper-slide -->
+                                            <!-- end of slide -->
+
+                                            <!-- Slide -->
+                                            <div class="swiper-slide">
+                                                <div class="card">
+                                                    <img class="quotes" src="assets/img/quotes.svg" alt="alternative">
+                                                    <div class="card-body">
+                                                        <p class="testimonial-text">Lorem ipsum dolor sit amet,
+                                                            consectetur
+                                                            ing elit. Nulla id nisl tempus risus facilisis efficr ut
+                                                            tincidunt vitae enim non vehicula. Phases vitae metus in
+                                                            felis
+                                                            gravida ultrices zimbo</p>
+                                                        <div class="details">
+                                                            <img class="testimonial-image"
+                                                                src="assets/img/testimonial-1.jpg" alt="alternative">
+                                                            <div class="text">
+                                                                <div class="testimonial-author">Ronny Drummer</div>
+                                                                <div class="occupation">Designer - Sawdust</div>
+                                                            </div> <!-- end of text -->
+                                                        </div> <!-- end of testimonial-details -->
+                                                    </div>
+                                                </div>
+                                            </div> <!-- end of swiper-slide -->
+                                            <!-- end of slide -->
+
+                                        </div> <!-- end of swiper-wrapper -->
+
+                                        <!-- Add Arrows -->
+                                        <div class="swiper-button-next"></div>
+                                        <div class="swiper-button-prev"></div>
+                                        <!-- end of add arrows -->
+
+                                    </div> <!-- end of swiper-container -->
+                                </div> <!-- end of slider-container -->
+                                <!-- end of card slider -->
+
+                            </div> <!-- end of col -->
+                        </div> <!-- end of row -->
+                    </div> <!-- end of container -->
+                </div> <!-- end of slider-1 -->
+            </div>
+        </section>
+
         <!-- ======= Contact Section ======= -->
         <section id="contact" class="contact section-bg">
             <div class="container">
@@ -650,15 +790,11 @@
 
             </div>
         </section><!-- End Contact Section -->
-
     </main>
 
     <footer id="footer">
-
         <div class="footer-top">
-
             <div class="container">
-
                 <div class="row  justify-content-center">
                     <div class="col-lg-6">
                         <h3></h3>
@@ -666,16 +802,13 @@
                             commodi placeat.</p>
                     </div>
                 </div>
-
                 <div class="social-links">
                     <a href=""><i class="fab fa-facebook-f"></i></a>
                     <a href=""><i class="fab fa-twitter"></i></a>
                     <a href=""><i class="fab fa-instagram"></i></a>
                     <a href=""><i class="fab fa-linkedin-in"></i></a>
                     <a href=""> <i class="fab fa-skype"></i></a>
-
                 </div>
-
             </div>
         </div>
         <div class="container footer-bottom clearfix">
@@ -700,6 +833,7 @@
     <script src="./assets/venobox/aos.js"></script>
 
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+    <script src="assets/venobox/swiper.min.js"></script>
 
     <script src="./assets/venobox/venobox.min.js"></script>
 
