--- a/index.html
+++ b/index.html
@@ -201,20 +201,98 @@
                 <div class="row">
 
 
-                    <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-right">
+                    <div class="col-md-4 d-flex align-items-stretch" data-aos="fade-right">
                         <div class="card">
                             <div class="card-img">
-                                <img src="assets/img/services-1.jpg" alt="...">
+                                <img src="assets/img/bannerAppsWeb.jpg" alt="...">
                             </div>
 
                             <div class="card-body">
-                                <h5 class="card-title">Temporibus laudantium</h5>
+                                <h5 class="card-title">Aplicaciones Web</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor
                                     ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                                     ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-md-4 d-flex align-items-stretch" data-aos="fade-right">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="assets/img/bannerAppsPersonalizada.jpg" alt="...">
+                            </div>
+
+                            <div class="card-body">
+                                <h5 class="card-title">Aplicaciones Personalizadas</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor
+                                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                    ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 d-flex align-items-stretch" data-aos="fade-right">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="assets/img/bannerAppsMovil.jpg" alt="...">
+                            </div>
+
+                            <div class="card-body">
+                                <h5 class="card-title">Aplicaciones Movil</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor
+                                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                    ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                    <div class="col-md-4 d-flex align-items-stretch" data-aos="fade-left">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="assets/img/ux.jpg" alt="...">
+                            </div>
+
+                            <div class="card-body">
+                                <h5 class="card-title">Diseño UX</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor
+                                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                    ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 d-flex align-items-stretch" data-aos="fade-left">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="assets/img/ui.png" alt="...">
+                            </div>
+
+                            <div class="card-body">
+                                <h5 class="card-title">Diseño UI</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor
+                                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                    ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 d-flex align-items-stretch" data-aos="fade-left">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="assets/img/photos.png" alt="...">
+                            </div>
+
+                            <div class="card-body">
+                                <h5 class="card-title">Fotografia</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor
+                                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                    ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                            </div>
+                        </div>
+                    </div>
+
 
                     <!-- Aqui van los del json -->
 
